--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-# Add these lines
+
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 langchain_text_splitters
+
+#Docu and files processing libs
+pypdf2==3.0.1
+pdfplumber==0.10.3
+python-docx==1.1.0
+pymupdf==1.23.8
+python-magic-bin==0.4.14
