--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     container_name: epice-api
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
       - LOG_LEVEL=info
@@ -16,8 +18,6 @@ services:
       - ./data:/app/data
       - ./policy_documents:/app/policy_documents
       - ./api/logs:/app/api/logs
-    depends_on:
-      - frontend
     networks:
       - epice-network
     healthcheck:
@@ -28,7 +28,7 @@ services:
       start_period: 40s
     restart: unless-stopped
 
-  # Frontend Service
+  # Frontend Service (depends on API so it can resolve host "api")
   frontend:
     build:
       context: ./frontend
@@ -38,10 +38,11 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://api:8000
-    volumes:
-      - ./frontend/node_modules:/app/node_modules
-      - ./frontend:/app
+      # Browser must reach API by host; use localhost when app is at localhost:3000
+      - NEXT_PUBLIC_API_URL=http://localhost:8000/api
+    depends_on:
+      api:
+        condition: service_healthy
     networks:
       - epice-network
     restart: unless-stopped
