--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -11,7 +11,9 @@ RUN apt-get update && apt-get install -y \
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
+RUN pip install --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
+
 
 # Final stage
 FROM python:3.11-slim
